clusters/app.ci/assets/helpdesk-faq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-faq
  namespace: ci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helpdesk-faq
  template:
    metadata:
      labels:
        app: helpdesk-faq
    spec:
      containers:
      - args:
        - --kubeconfig=/etc/build-farm-credentials/kubeconfig
        - --log-level=debug
        name: helpdesk-faq
        image: registry.ci.openshift.org/ci/helpdesk-faq:latest
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 60
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
        volumeMounts:
        - mountPath: /etc/build-farm-credentials
          name: build-farm-credentials
          readOnly: true
      volumes:
      - name: build-farm-credentials
        secret:
          items:
          - key: sa.config-updater.app.ci.config
            path: kubeconfig
          secretName: config-updater
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  name: helpdesk-faq
spec:
  selector:
    app: helpdesk-faq
  ports:
  - name: helpdesk-faq
    port: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helpdesk-faq
  name: helpdesk-faq
  namespace: ci
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080
  to:
    kind: Service
    name: helpdesk-faq
